--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<title>Toilet Paper Rush</title>
 </head>
 <body>
-	<img src="roll.png" style="width:200px;height:200px";>
+	<div class="images" id="images">
+		<img src="black.png"  style=" width:120px;height:120px; margin-left: 650px; margin-top: 100px";>
+		<img src="virus.png" style="position: fixed; width:120px;height:120px; margin-left: 5px; margin-top: 200px";>
+		<img src="quarantine.png" style="position: fixed; width:180px;height:120px; margin-left: 150px; margin-top: 200px" >
+	</div>
 	<h1> TOILET PAPER RUSH !</h1>
 	<div class="container">
 	<div class="slidecontainer">
